Fix Railway build: remove Dockerfile, improve nixpacks config

--- a/backend/nixpacks.toml
+++ b/backend/nixpacks.toml
@@ -1,4 +1,7 @@
-[phases.build]
+[providers]
+python = "3.11"
+
+[phases.install]
 cmds = ["pip install -r requirements.txt"]
 
 [phases.start]
@@ -6,3 +9,4 @@ cmd = "uvicorn main:app --host 0.0.0.0 --port $PORT"
 
 [variables]
 PYTHONPATH = "/app"
+PORT = "8000"
