--- a/railway.toml
+++ b/railway.toml
@@ -1,7 +1,10 @@
-[build]
+[[services]]
+name = "backend"
+source = "backend"
+
+[services.build]
 builder = "nixpacks"
 
-[deploy]
+[services.deploy]
 startCommand = "uvicorn main:app --host 0.0.0.0 --port $PORT"
 healthcheckPath = "/health"
-restartPolicyType = "on_failure"
