--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,7 +3,7 @@ uvicorn[standard]==0.24.0
 sqlalchemy==2.0.23
 alembic==1.12.1
 psycopg2-binary==2.9.9
-pydantic==2.5.0
+pydantic[email]==2.5.0
 python-multipart==0.0.6
 python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
@@ -11,3 +11,4 @@ python-dotenv==1.0.0
 docker==6.1.3
 redis==5.0.1
 gunicorn==21.2.0
+email-validator==2.1.0
